# University-database

./: CMakeLists.txt  Dockerfile  README.md
database/: entities.csv  students.csv
inc/: CommandLineInterface.hpp  Entity.hpp  EntityFactory.hpp  EntityUtils.hpp  Enums.hpp  Professor.hpp  Student.hpp  UniversityDatabase.hpp  UserInputHandler.hpp  consoleGui.hpp  mathStudent.hpp  student.hpp  studentdatabase.hpp
output/: students.csv
src/: CommandLineInterface.cpp  Entity.cpp  EntityFactory.cpp  EntityUtils.cpp  Professor.cpp  Student.cpp  UniversityDatabase.cpp  UserInputHandler.cpp  consoleGui.cpp  main.cpp  mathStudent.cpp  studentdatabase.cpp
